feed author info should be aligned right fix #65

--- a/app/assets/stylesheets/_app.sass
+++ b/app/assets/stylesheets/_app.sass
@@ -121,6 +121,7 @@
   display: block
 
 .ui.feed > .event > .content
+  margin-top: 0 !important
   .summary
     color: $dark-font-color
     font-weight: normal
